# yadw

./: .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml
yadw/resources/: application_command.py  audit_logs.py  channel.py  emoji.py  guild.py  guild_template.py  interaction.py  invite.py  permissions.py  role.py  stage_instance.py  sticker.py  user.py  voice.py  webhook.py
